--- a/estilo.css
+++ b/estilo.css
@@ -139,15 +139,14 @@ footer {
 
 }
 
-li{
 
-  margin: 1px;
-  transition: transform 0.5s ease;
 
+.menu>li:hover{
+  transform: scale(1.2);
 }
 
 
-li:hover{
+.lista>li:hover{
 
 
   transform: scale(1.2);
@@ -321,62 +320,87 @@ img.zoom {
 
 
 
+#menuMoviles{
+
+  display: none;
+  padding-left: 0;
+  padding: 0;
+  margin: 0 auto;
+  font-family: fantasy;
+  font-weight: 400;
+  font-size: large;
+  
+}
+
+
+#menuMoviles>ul{
+
+  padding-left: 0;
+
+  list-style: none;
+  
+
+}
 
 
 
+#menuMoviles>ul:hover{
+
+  cursor: pointer;
+ 
+
+}
+
+.listaMenuMoviles>li{
+
+  margin: 10px;
+  padding: 10px;
+  background-color: gainsboro;
+  border-radius: 1em;
+  box-shadow: 1px 2px 2px 2px rgba(0,0,0,0.25);
 
 
-
-@media (max-width: 800px){
-
-
-    .column{
-
-        flex: 50%
-
-    }
+}
 
 
-    .column img{
+.listaMenuMoviles>li:hover{
 
-        size: 50px;
+  box-shadow:  2px 2px rgba(0,0,0,0.25);
 
-    
 
-    }
+}
 
-    
+.listaMenuMoviles>li:active{
+
+
+  box-shadow: 1px 2px 2px 2px rgba(0,0,0,0.25);
 
 
 
 }
 
 
-@media (max-width: 600px){
+#submenuSocial{
 
 
-  .header1{
-
-    display: none;
-
-
-
-  }
-
-  textarea{
-
-    width: 50%;
-
-
-    
-  }
-
-
-
-
+  display: none;
+  list-style: none;
+  margin-left: 0;
+  padding-left: 0;
+  border-radius: 1em;
+  font-size: small;
+  font-weight: 100;
 
 
 }
+
+
+
+
+
+
+
+
 
 /*
 @media (max-width: 3000px){
@@ -682,5 +706,91 @@ transform: scale(1.2);
 textarea{
 
   outline:none;
+
+}
+
+
+
+
+
+@media (max-width: 800px){
+
+
+  .column{
+
+      flex: 50%
+
+  }
+
+
+  .column img{
+
+      size: 50px;
+
+  
+
+  }
+
+
+  
+#menuMoviles{
+
+  display: none;
+
+}
+
+
+
+}
+
+
+@media (max-width: 600px){
+
+
+.header1{
+
+  display: none;
+
+
+
+}
+
+textarea{
+
+  width: 50%;
+
+
+  
+}
+
+
+#menuMoviles{
+
+  display: block;
+
+}
+
+
+
+#overlayImageH{
+
+  max-width: 90%;
+  max-height: 100%;
+
+}
+
+
+#overlayImageV{
+
+  max-width: 55%;
+  max-height: 130%;
+
+
+}
+
+
+
+
+
 
 }
