--- a/estilo.css
+++ b/estilo.css
@@ -279,6 +279,12 @@ img{
 }
 
 
+a:active, button:active {
+  background-color: transparent; /* o el mismo color que el fondo normal */
+}
+
+
+
 
 
 
@@ -369,6 +375,17 @@ img.zoom {
 
 
 }
+
+
+.listaMenuMoviles>li:active{
+
+  background-color: transparent; /* o el mismo color que el fondo normal */
+
+}
+
+
+
+
 
 .listaMenuMoviles>li:active{
 
@@ -513,16 +530,13 @@ img.zoom {
 
 }
 
+
 li{
 
 
   transition: transform 0.5s ease;
 
 }
-
-
-
-
 
 
 
