--- a/estilo.css
+++ b/estilo.css
@@ -1,27 +1,36 @@
-*{
+* {
 
-    box-sizing: border-box;
+  box-sizing: border-box;
 
-    /*
+  /*
     scrollbar-color: white black;
     scrollbar-width:auto;
     */
-  }
+}
 
-body{
+body {
 
-    margin: 0;
-    padding: 0;
-    text-align: center;
- 
-    
+  margin: 0;
+  border: 10px solid rgb(240, 240, 240);
+  padding: 0;
+  text-align: center;
+
+
+
+}
+
+a {
+
+  text-decoration: none;
+  color: inherit;
+  list-style: none;
+
+
 }
 
 
 
-
-
-#imagenLogo{
+#imagenLogo {
 
   padding: 10px;
   width: 80px;
@@ -31,35 +40,23 @@ body{
 
 
 
-.menu{
-
-    display: flex;
-    position:sticky;
-    height: 60px;
-    flex: 1;
-    flex-direction: row;
-    justify-content: center;
-    text-align: center;
-    align-items: center;
-    margin-left: 1%;
-    margin-right: 1%;
-
-}
 
 
-
-.submenu{
+.submenu {
 
   display: flex;
   display: none;
   margin: 0 auto;
+  margin-top: 15px;
   margin-bottom: 30px;
   width: max-content;
   border-radius: 1rem;
-  position:relative;
-  left: -290px;
-  animation: desplegar 0.7s ease forwards;
-  transform-origin: top; /* Agrega la transformación del origen del submenu */
+  position: relative;
+  z-index: 1;
+  left: -210px;
+  animation: desplegar 1s ease forwards;
+  transform-origin: top;
+  /* Agrega la transformación del origen del submenu */
 
 
   /*
@@ -67,12 +64,17 @@ body{
  */
 
 
- 
+
 
 }
 
 
-footer{
+
+
+
+
+
+footer {
 
   display: flex;
   justify-content: center;
@@ -86,7 +88,7 @@ footer{
   background-color: rgb(240, 240, 240);
   padding: 10px;
   margin-top: 1px;
-  margin-bottom: 1px;
+  margin-bottom: 0;
 
   /* tengo que poner el footer en el index como relative y en el 
   resto de html como absolute */
@@ -95,7 +97,7 @@ footer{
 
 }
 
-.f2{
+.f2 {
 
 
   position: relative;
@@ -104,284 +106,425 @@ footer{
 }
 
 
-/*
-footer {
 
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  margin-bottom: 5px;
-  background-color: rgb(120, 122, 122);
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  height: 50px;
-}
-*/
 
-.lista{
+.lista {
 
   display: flex;
   flex-direction: column;
   margin: 0 auto;
   justify-content: center;
   text-align: center;
-  text-decoration: none;
-  list-style: none;
   height: 100%;
   padding: 0;
 
-  
 
 
 
-
-
-}
-
-
-
-.menu>li:hover{
-  transform: scale(1.2);
-}
-
-
-.lista>li:hover{
-
-
-  transform: scale(1.2);
 
 
 
 }
 
-.sm{
 
-  text-decoration: none;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-weight: bold;
-  color: gray;
-  font-size:small;
+
+li {
+
+  list-style: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+h3 {
+
+  display: inline;
+  padding-inline: 40px;
+  font-family: 'Times New Roman', Times, serif;
+  font-style: italic;
+}
+
+.sinBody {
+
+  display: none;
+
+}
+
+
+
+img {
+
+  size: 100%;
+  width: 100%;
+}
+
+.row {
+
+  margin-left: 7%;
+  margin-right: 7%;
+  margin-top: 20px;
+  position: relative;
+  display: flex;
+  padding: 5px;
+  flex-wrap: wrap;
+  animation-fill-mode: backwards;
+  animation-delay: 1s;
+  transition: display 1s;
+
+}
+
+
+
+.column {
+
+  flex: 25%;
   padding: 5px;
 
-
-
 }
 
-
-
-
-h3{
-
-    display: inline;
-    padding-inline: 40px;
-    font-family: 'Times New Roman', Times, serif;
-    font-style: italic;
-}
-
-.sinBody{
-
-    display: none;
-
-}
-
-
-
-img{
-
-    size: 100%;
-    width: 100%;
-}
-
-.row{
-
-    margin-left: 7%;
-    margin-right: 7%;
-    margin-top: 20px;
-    display: flex;
-    padding: 5px;
-    flex-wrap: wrap;
-    
-}
-
-.column{
-
-    flex: 25%;
-    padding: 5px;
-
-}
-
-.teknofilos{
+.teknofilos {
 
   display: flex;
   align-items: center;
   text-align: center;
   justify-content: center;
   margin-top: 20px;
-  
-
-
-
-
-
 
 
 }
 
 
 
+.column img {
 
-.column img{
-
-    margin-top: 5px;
-    size: 100%;
-    transition:  opacity 0.6s ease;
-    padding: 4px;
-    /*
+  margin-top: 5px;
+  size: 100%;
+  transition: opacity 0.6s ease;
+  padding: 4px;
+  /*
     transition: transform 0.5s ease;
     */
-    cursor:pointer; cursor: hand;    
+  cursor: pointer;
+  cursor: hand;
 
 
 }
 
 
-#overlayH img{
+#overlayH img {
 
 
   size: 100%;
 
 
-
 }
 
 
 
-#overlayV img{
+#overlayV img {
 
 
   size: 100%;
 
+}
+
+
+.column img:hover {
+
+  /*transform: scale(1.035);*/
+  opacity: 0.6;
 
 
 }
 
 
-
-
-
-.column img:hover{
-
-    /*transform: scale(1.035);*/
-    opacity: 0.6;
-
-    
-}
-
-
-
-
-
-
-
-/* EFECTOS PARA LOS HOVER */
-
-/*
-img.zoom {
-   
-    -webkit-transition: all .3s ease-in-out;
-    -moz-transition: all .3s ease-in-out;
-    -o-transition: all .3s ease-in-out;
-    -ms-transition: all .3s ease-in-out;
-}
- 
-.transition {
-    -webkit-transform: scale(1.5); 
-    -moz-transform: scale(1.5);
-    -o-transform: scale(1.5);
-    transform: scale(1.5);
-}
-
-
-
-*/
 
 @keyframes desplegar {
+
+
   0% {
     opacity: 0;
-    transform: scaleY(0) translateY(-100%); /* Agrega la transformación para desplegar desde arriba */
+    transform: scaleY(0) translateY(-100%);
+    /* Agrega la transformación para desplegar desde arriba */
   }
+
+
+  50% {
+
+
+    transform: scaleY(1) translateY(20%);
+    /* Agrega la transformación para desplegar desde arriba */
+
+
+  }
+
+}
+
+
+
+@keyframes abrirOverlay {
+  0% {
+    opacity: 0;
+  }
+
+  10% {
+
+    opacity: 0.1;
+
+  }
+
+  20% {
+
+    opacity: 0.2;
+
+  }
+
+  30% {
+
+    opacity: 0.3;
+
+  }
+
+  40% {
+
+    opacity: 0.4;
+
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  60% {
+
+    opacity: 0.6;
+
+
+
+  }
+
+  70% {
+
+    opacity: 0.7;
+
+
+
+  }
+
+  80% {
+
+    opacity: 0.8;
+
+
+
+  }
+
+  90% {
+
+    opacity: 0.9;
+
+
+
+  }
+
   100% {
     opacity: 1;
-    transform: scaleY(1) translateY(0%); /* Agrega la transformación para desplegar desde arriba */
   }
 }
 
 
 
 
+@keyframes cerrarOverlay {
+  0% {
+    opacity: 1;
+  }
 
-#menuMoviles{
+  10% {
 
-  display: none;
-  padding-left: 0;
+    opacity: 0.9;
+
+  }
+
+  20% {
+
+    opacity: 0.8;
+
+  }
+
+  30% {
+
+    opacity: 0.7;
+
+  }
+
+  40% {
+
+    opacity: 0.6;
+
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  60% {
+
+    opacity: 0.4;
+
+
+  }
+
+  70% {
+
+    opacity: 0.3;
+
+
+
+  }
+
+  80% {
+
+    opacity: 0.2;
+
+
+
+  }
+
+  90% {
+
+    opacity: 0.1;
+
+
+
+  }
+
+  100% {
+    opacity: 0;
+  }
+}
+
+
+.listaMenuMoviles {
+
+
   padding: 0;
-  margin: 0 auto;
-  font-family: fantasy;
-  font-weight: 400;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  transition: opacity 0.5s;
+  display: none;
+
+
+
+
+
+}
+
+
+
+
+.submovil {
+
+  transition: opacity 0.5s;
+  margin-top: 5px;
+  margin-left: 7%;
+  margin-right: 7%;
   font-size: large;
-  
-}
 
 
-#menuMoviles>ul{
 
-  padding-left: 0;
-
-  list-style: none;
-  
 
 }
 
 
 
-#menuMoviles>ul:hover{
+.submovil:hover {
+
 
   cursor: pointer;
- 
+  opacity: 30%;
+
+
+
+
+
 
 }
 
-.listaMenuMoviles>li{
 
-  margin: 10px;
-  padding: 10px;
-  background-color: gainsboro;
+.submovil:hover {
+
+
+  cursor: pointer;
+
+
+
+}
+
+
+
+.subsub {
+
+  background-color: white;
+  padding: 5px;
+  margin-left: 7%;
+  margin-right: 7%;
+  color: black;
+  margin-top: 5px;
+  margin-bottom: 5px;
   border-radius: 1em;
-  box-shadow: 1px 2px 2px 2px rgba(0,0,0,0.25);
+  transition: background-color 0.5s, opacity 0.5s;
+  animation: desplegar 0.8s ease;
 
 
-}
 
-
-.listaMenuMoviles>li:hover{
-
-  box-shadow:  2px 2px rgba(0,0,0,0.25);
-
-
-}
-
-.listaMenuMoviles>li:active{
-
-
-  box-shadow: 1px 2px 2px 2px rgba(0,0,0,0.25);
 
 
 
 }
 
 
-#submenuSocial{
+.subsub:hover {
+
+  cursor: pointer;
+  opacity: 30%;
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+#submenuSocial {
 
 
   display: none;
@@ -401,8 +544,6 @@ img.zoom {
 
 
 
-
-
 /*
 @media (max-width: 3000px){
 
@@ -415,75 +556,80 @@ img.zoom {
 }*/
 
 
-#overlayH{
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255);
-    display: none;
-    
-  }
+#overlayH {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255);
+  display: none;
+  animation: abrirOverlay 0.5s;
+
+}
 
 
-  
-#overlayV{
-    position: fixed;
-    z-index: 999;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(255, 255, 255);
-    /*background-color: rgba(255, 255, 255, 0.7); asi estaba antes*/
-    display: none;
 
-  }
-  
+#overlayV {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255);
+  /*background-color: rgba(255, 255, 255, 0.7); asi estaba antes*/
+  display: none;
+  animation: abrirOverlay 0.5s;
 
-  
-  #overlayImageH{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 60%;
-    max-height: 70%;
-    box-shadow: 0px 5px 15px rgba(0,0,0,0.25);
-  }
+}
 
 
-  #overlayImageV{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    max-width: 25%;
-    max-height: 100%;
-    box-shadow: 0px 5px 15px rgba(0,0,0,0.25);
-  }
-  
-  #closeButton {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-    font-size: 50px;
-    color: rgb(0, 0, 0);
-    cursor: pointer;
-    transition: transform 0.5s ease;
-  }
-  
-  #closeButton:hover {
-    transform: rotate(180deg);
-  }
 
 
-  
-  
 
- 
+
+#overlayImageH {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 60%;
+  max-height: 70%;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+}
+
+
+#overlayImageV {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  max-width: 25%;
+  max-height: 100%;
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+}
+
+#closeButton {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  font-size: 50px;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  transition: transform 0.5s ease;
+}
+
+#closeButton:hover {
+  transform: rotate(180deg);
+}
+
+
+
+
+
+
 
 /*
   @font-face {
@@ -493,29 +639,30 @@ img.zoom {
 
 */
 
-  .m{
+.m {
 
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:large;
-  
-    text-decoration: none;
-    color: black;
-    padding-inline: 40px;
-    transition: transform 0.5s ease;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
 
-  }
+  text-decoration: none;
+  color: black;
+  padding-inline: 40px;
+  transition: transform 0.5s ease;
+
+}
 
 
-  
+
 
 .m:hover {
+
   transform: scale(1.2);
 
 
 }
 
 
-li{
+li {
 
 
   transition: transform 0.5s ease;
@@ -526,35 +673,35 @@ li{
 
 
 
-  span{
+span {
 
-    font-size: xx-large;
-    font-weight: bold; 
-
-
-}
-
-
-.logo{
-
-    height:  150px;
-    width: 180px;
-    margin-bottom: 20px;
+  font-size: xx-large;
+  font-weight: bold;
 
 
 }
 
 
-.imagenLogo{
+.logo {
 
-    display: flex;
-    position: absolute;
-    top: 10px;
-    left: 20px;
-    height: 100px;
-    width: 130px;
+  height: 150px;
+  width: 180px;
+  margin-bottom: 20px;
 
-    
+
+}
+
+
+.imagenLogo {
+
+  display: flex;
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  height: 100px;
+  width: 130px;
+
+
 
 
 
@@ -582,7 +729,7 @@ li{
 
 
 
-.subir{
+.subir {
 
   color: white;
   position: relative;
@@ -598,11 +745,11 @@ li{
   padding: 20px;
   font-size: 50px;
   text-decoration: none;
-  
+
 }
 
 
-.subir:hover{
+.subir:hover {
 
   background-color: darkgrey;
 
@@ -611,7 +758,7 @@ li{
 
 /* FORMULARIO */
 
-.formulario-container{
+.formulario-container {
 
   display: flex;
   padding: 10px;
@@ -636,13 +783,13 @@ li{
 }
 
 
-.d{
+.d {
 
   position: absolute;
 
 }
 
-input{
+input {
 
   margin: 5px;
   outline: none;
@@ -654,7 +801,7 @@ input{
 }
 
 
-#texto{
+#texto {
 
 
   width: 400px;
@@ -669,17 +816,17 @@ input{
 }
 
 
-.tFormulario{
+.tFormulario {
 
   color: rgb(106, 106, 106);
   border-radius: 1rem;
-  
+
 
 
 }
 
 
-button{
+button {
 
   margin-top: 10px;
   margin-bottom: 10px;
@@ -703,7 +850,7 @@ button{
 
 
 button:hover {
-transform: scale(1.2);
+  transform: scale(1.2);
 
 
 }
@@ -711,9 +858,9 @@ transform: scale(1.2);
 
 
 
-textarea{
+textarea {
 
-  outline:none;
+  outline: none;
 
 }
 
@@ -721,81 +868,293 @@ textarea{
 
 
 
-@media (max-width: 800px){
 
 
-  .column{
 
-      flex: 50%
+.irArriba {
+
+
+  height: 50px;
+  width: 50px;
+  margin: 10px;
+  color: gray;
+  transition: opacity 0.4s;
+
+
+}
+
+
+.irArriba:hover {
+
+
+  opacity: 60%;
+
+
+
+
+
+
+}
+
+
+
+.list {
+
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  gap: 40px;
+  font-size: large;
+  font-family: Arial, Helvetica, sans-serif;
+
+
+}
+
+
+
+.link {
+
+
+  text-decoration: none;
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  color: black;
+
+
+}
+
+
+
+
+.linksub {
+
+  margin-top: 10px;
+
+
+
+}
+
+
+.link::before,
+.link::after {
+
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: rgb(0, 0, 0);
+  transform: scaleX(0);
+  transition: transform 0.40s;
+
+
+}
+
+
+
+.link::before {
+
+  top: -3px;
+
+
+
+
+}
+
+
+
+
+
+.link::after {
+
+  bottom: -3px;
+
+  transform-origin: right;
+
+
+
+
+}
+
+
+.link:hover {
+
+
+
+  cursor: pointer;
+
+}
+
+
+
+
+
+
+.link:hover::before,
+.link:hover::after,
+.active::before,
+.active::after {
+
+
+  transform: scaleX(1);
+
+
+
+
+}
+
+
+.linksub:hover::before {
+  transform: scaleX(0);
+  /* Oculta la línea de arriba al hacer hover */
+
+}
+
+.linksub:hover::after {
+  transform: scaleX(1);
+  /* Muestra la línea de debajo al hacer hover */
+
+}
+
+
+
+
+
+
+
+.sublista1 {
+
+
+  flex-direction: column;
+  display: none;
+  height: 60px;
+
+
+
+
+
+
+}
+
+
+
+
+
+
+/*animaciones*/
+
+
+
+
+
+
+
+@media (max-width: 800px) {
+
+
+  .column {
+
+    flex: 50%
+  }
+
+
+  .column img {
+
+    size: 50px;
+
+
 
   }
 
 
-  .column img{
 
-      size: 50px;
+  #menuMoviles {
 
-  
+    display: none;
 
   }
 
 
-  
-#menuMoviles{
-
-  display: none;
-
-}
 
 
 
 }
 
 
-@media (max-width: 600px){
+@media (max-width: 600px) {
 
 
-.header1{
+  .header1 {
 
-  display: none;
-
-
-
-}
-
-textarea{
-
-  width: 50%;
-
-
-  
-}
-
-
-#menuMoviles{
-
-  display: block;
-  margin-bottom: 0;
-
-}
+    display: none;
 
 
 
-#overlayImageH{
-
-  max-width: 90%;
-  max-height: 100%;
-
-}
+  }
 
 
-#overlayImageV{
-
-  max-width: 55%;
-  max-height: 130%;
+  .list {
 
 
-}
+    display: none;
+  }
+
+  .lista {
+
+
+    display: none;
+
+  }
+
+
+  .listaMenuMoviles {
+
+    display: block;
+
+
+
+  }
+
+
+
+
+
+  textarea {
+
+    width: 50%;
+
+
+
+  }
+
+
+  #menuMoviles {
+
+    display: block;
+    margin-bottom: 0;
+
+  }
+
+
+
+  #overlayImageH {
+
+    max-width: 90%;
+    max-height: 100%;
+
+  }
+
+
+  #overlayImageV {
+
+    max-width: 55%;
+    max-height: 130%;
+
+
+  }
 
 
 
