--- a/estilo.css
+++ b/estilo.css
@@ -1,7 +1,5 @@
 
 
-
-
 html{
 
 
@@ -31,7 +29,8 @@ body {
   text-align: center;
   background-color: white;
   transform: background-color 1s;
-  box-sizing: border-box;
+  box-sizing: 100%;
+  
 
 
 
@@ -1019,34 +1018,10 @@ input {
 }
 
 
-button {
-
-  margin-top: 10px;
-  margin-bottom: 10px;
-  background: lightblue;
-  border-radius: 50%;
-  width: 70px;
-  height: 70px;
-  text-decoration: none;
-  background-color: rgb(218, 218, 218);
-  border-color: black;
-  text-transform: uppercase;
-  border-style: solid;
-  transition: transform 0.5s ease;
-
-
-}
 
 
 
 
-
-
-button:hover {
-  transform: scale(1.2);
-
-
-}
 
 
 
@@ -1320,6 +1295,57 @@ textarea {
 }
 
 
+
+.menu-contacto{
+
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  height: 100%;
+
+
+}
+
+.menu-contacto>li{
+
+
+  margin: 10px;
+  transition: border-top 0.1s;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  background-color: black;
+  color: wheat;
+  padding: 5px;
+  margin-top: 10px solid blue;
+
+
+
+  
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*-------------------------------------------------------------------------------------------------------*/
+
+
 @media (max-width: 600px) {
 
 
@@ -1386,8 +1412,8 @@ textarea {
 
   #overlayImageV {
 
-    max-width: 55%;
-    max-height: 130%;
+    max-width: 65%;
+    max-height: 150%;
 
 
   }
@@ -1427,8 +1453,8 @@ textarea {
   .imagenLogo{
 
 
-    height: 70px;
-    width: 80px;
+    height: 80px;
+    width: 90px;
 
 
 
