--- a/estilo.css
+++ b/estilo.css
@@ -287,7 +287,7 @@ img {
 .row {
   margin-left: 7%;
   margin-right: 7%;
-  margin-top: 20px;
+  
   position: relative;
   display: flex;
   padding: 5px;
@@ -300,24 +300,43 @@ img {
 }
 
 .submenu {
-
-  display: none;
+  display: block;
+  opacity: 0;
+  visibility: hidden;
+  position: relative;
+  top: -50px;
   margin: 0 auto;
   margin-top: 15px;
   margin-bottom: 0;
   width: max-content;
   border-radius: 1rem;
-  position: relative;
-  left: -210px;
-  animation: desplegar 1s ease forwards;
+  left: -165px;
   transform-origin: top;
-  
-  /* Agrega la transformación del origen del submenu */
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  transition: opacity 1s;
 
 
-  /*
-  transition: all 0.3s ease-in-out;
- */
+
+
+}
+
+.submenu.visible {
+  opacity: 1;
+  visibility: visible;
+}
+
+.submenu ul {
+  display: flex;
+  flex-direction: row; /* Cambiado a dirección horizontal */
+  justify-content: flex-start; /* Alineación hacia la izquierda */
+  padding: 0; /* Eliminado el relleno */
+}
+
+.submenu li {
+  margin-right: 10px; /* Margen derecho para separar las pestañas */
+  list-style: none; /* Eliminado los estilos de viñetas */
 }
 
 
@@ -396,23 +415,6 @@ img {
 }
 
 
-@keyframes replegar {
-  0% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-
-
-
-
-
-
-  100% {
-    opacity: 0;
-    transform: translateY(-40px);
-  }
-}
-
 
 
 
@@ -420,19 +422,81 @@ img {
 @keyframes desplegar {
   0% {
     opacity: 0;
-    transform: translateY(-40%);
   }
-
-
-
-
-
-
+  10% {
+    opacity: 0.1;
+  }
+  20% {
+    opacity: 0.2;
+  }
+  30% {
+    opacity: 0.3;
+  }
+  40% {
+    opacity: 0.4;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  60% {
+    opacity: 0.6;
+  }
+  70% {
+    opacity: 0.7;
+  }
+  80% {
+    opacity: 0.8;
+  }
+  90% {
+    opacity: 0.9;
+  }
+ 
   100% {
     opacity: 1;
     transform: translateY(0);
   }
 }
+@keyframes replegar {
+  0% {
+    opacity: 1;
+  }
+  10% {
+    opacity: 0.5;
+  }
+  20% {
+    opacity: 0.1;
+  }
+  30% {
+    opacity: 0.0;
+  }
+  40% {
+    opacity: 0.0;
+  }
+  50% {
+    opacity: 0.0;
+  }
+  60% {
+    opacity: 0.0;
+  }
+  70% {
+    opacity: 0.0;
+  }
+  80% {
+    opacity: 0;
+  }
+  90% {
+    opacity: 0;
+  }
+ 
+  100% {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(0);
+  }
+}
+
+
+
 
 
 
@@ -1067,6 +1131,35 @@ textarea {
 
 
 
+@font-face {
+  font-family: Satoshi;
+  src: url(Satoshi_Complete/Fonts/Variable/Satoshi-Variable.ttf);
+
+}
+
+@font-face {
+  font-family: ClashDisplay;
+  src: url(ClashDisplay_Complete/Fonts/WEB/css/clash-display.css);
+
+}
+
+
+@font-face {
+  font-family: Zodiak;
+  src: url(fuentes/Zodiak_Complete/Fonts/Variable/Zodiak-Variable.ttf);
+}
+
+
+
+@font-face {
+  font-family: Alpino;
+  src: url(fuentes/Alpino_Complete/Fonts/Variable/Alpino-Variable.ttf);
+}
+
+
+
+
+
 .list {
 
   list-style: none;
@@ -1076,7 +1169,10 @@ textarea {
   align-items: center;
   gap: 40px;
   font-size: large;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Zodiak;
+  font-weight: 500;
+
+  font-size: 22px;
 
 }
 
@@ -1108,7 +1204,9 @@ textarea {
 
 .linksub {
 
-  margin-top: 10px;
+  
+  font-family: Alpino;
+  font-size: 20px;
 
 
 
@@ -1122,7 +1220,7 @@ textarea {
   position: absolute;
   left: 0;
   width: 100%;
-  height: 2px;
+  height: 1px;
   background-color: rgb(0, 0, 0);
   transform: scaleX(0);
   transition: transform 0.40s;
