--- a/estilo.css
+++ b/estilo.css
@@ -24,7 +24,6 @@ html{
 body {
 
   margin: 0;
-  border: 10px solid rgb(240, 240, 240);
   padding: 0;
   text-align: center;
   background-color: white;
@@ -940,9 +939,12 @@ span {
 
 .logo {
 
-  height: 150px;
-  width: 180px;
+  height: 140px;
+  width: 170px;
   margin-bottom: 20px;
+  left: 20px;
+  position: relative;
+
 
 
 }
@@ -1167,15 +1169,17 @@ textarea {
   justify-content: center;
   text-align: center;
   align-items: center;
-  gap: 40px;
   font-size: large;
   font-family: Zodiak;
   font-weight: 500;
-
+  gap: 25px;
   font-size: 22px;
+  margin-left: 5%;
+  margin-right: 5%;
+  position: relative;
+  left: -25px;
 
 }
-
 
 
 
@@ -1363,66 +1367,51 @@ textarea {
 
 
 
+
 .main-contacto{
 
 
-  display: flex;
-  flex-direction: column;
+
+
+
   justify-content: center;
   text-align: center;
   align-items: center;
-  background-color: burlywood;
-  border: 2px solid lightgrey;
-
-}
-
-
-
-.correo{
-
-
-  font-weight: bold;
-  font-size: larger;
-
-
-
-
-
 
 
 }
 
 
 
-.menu-contacto{
-
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  display: flex;
-  flex-direction: row;
-  width: 100%;
-  height: 100%;
-
-
-}
-
-.menu-contacto>li{
-
-
-  margin: 10px;
-  transition: border-top 0.1s;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: bold;
-  background-color: black;
-  color: wheat;
-  padding: 5px;
-  margin-top: 10px solid blue;
+.main-contacto>h1{
 
 
 
+  font-family: Zodiak;
+  border-bottom: 1px solid black;
+  margin-top: 10%;
+  margin-left: 10%;
+  margin-right: 10%;
   
+
+
+
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
