--- a/estilo.css
+++ b/estilo.css
@@ -873,13 +873,26 @@ img {
   top: 10px;
   right: 20px;
   font-size: 50px;
+  width: 50px;
+  height: 50px;
   color: rgb(0, 0, 0);
+  scale: 1.1;
   cursor: pointer;
   transition: transform 0.5s ease;
+  transition: opacity 0.5s, scale 0.5s, border-bottom 0.5s;
+
 }
 
 #closeButton:hover {
-  transform: rotate(180deg);
+
+
+
+  opacity: 0.5;
+ 
+  
+
+
+
 }
 
 
@@ -942,7 +955,6 @@ span {
   height: 140px;
   width: 170px;
   margin-bottom: 20px;
-  left: 20px;
   position: relative;
 
 
@@ -1362,22 +1374,16 @@ textarea {
 
 }
 
-
-
-
-
+/* ESTILOS PAGINA DE CONTACTO */
 
 
 .main-contacto{
 
-
-
-
-
   justify-content: center;
   text-align: center;
   align-items: center;
-
+  margin-top: 10%;
+  
 
 }
 
@@ -1385,14 +1391,88 @@ textarea {
 
 .main-contacto>h1{
 
-
-
   font-family: Zodiak;
   border-bottom: 1px solid black;
-  margin-top: 10%;
+  margin-top: 7%;
   margin-left: 10%;
   margin-right: 10%;
   
+  
+}
+
+
+.parrafos{
+
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  font-family: Alpino;
+  font-size: 18px;
+  font-weight: 400;
+
+
+}
+
+
+.left-contacto{
+
+  
+
+
+  flex: 2;
+  padding: 20px;
+  margin-left: 100px;
+
+
+}
+
+
+
+.right-contacto{
+
+  flex: 1;
+  margin-left: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+
+
+}
+
+
+
+
+
+.logo-contacto{
+  position: absolute;
+  top: 10px;
+  left: 20px;
+  height: 120px;
+  width: 130px;
+  margin-bottom: 20px;
+}
+
+
+.icono{
+
+ width: 50px;
+ height: 50px;
+ margin-bottom: 20px;
+transition: opacity 0.5s;
+
+
+
+}
+
+.icono:hover{
+
+
+  opacity: 0.5;
 
 
 
@@ -1403,10 +1483,30 @@ textarea {
 
 
 
+.iconos{
+
+
+  display: flex;
+  flex-direction: column;
+
+
+}
 
 
 
 
+
+#correo{
+
+  font-family: Alpino;
+  background-color: rgb(185, 185, 185);
+  font-size: 18px;
+  padding: 5px;
+  font-weight: 600;
+
+
+
+}
 
 
 
@@ -1542,6 +1642,23 @@ textarea {
 
     height: 80px;
     width: 90px;
+
+
+
+
+  }
+
+
+  .logo-contacto{
+
+
+    display: none;
+  }
+
+  .icono{
+
+    height: 35px;
+    width: 35px;
 
 
 
