--- a/estilo.css
+++ b/estilo.css
@@ -1531,6 +1531,8 @@ textarea {
 
   display: flex;
   flex-direction: row;
+  position: relative;
+  top: -15px;
 
 
 
@@ -1852,8 +1854,13 @@ textarea {
 
 
 
+.icono{
 
-  
+
+  margin-bottom: none;
+
+
+}
 
 
 
@@ -1902,6 +1909,7 @@ textarea {
   margin-right: 5%;
   text-align: justify;
   margin-left: none;
+  font-size: 15px;
 
 
 
@@ -1918,8 +1926,8 @@ textarea {
   align-items: center;
   margin-right: 50px;
   margin-bottom: 50px;
-  height: 50%;
-  width: 50%;
+  height: 60%;
+  width: 60%;
 
 }
 
