--- a/estilo.css
+++ b/estilo.css
@@ -9,6 +9,43 @@ html {
 
 
 
+#video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#video-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+#content {
+  position: relative;
+  z-index: 1;
+  /* Establece estilos adicionales para tu contenido */
+}
+
+
+.linkvideo{
+
+
+  color: white;
+
+}
+
+
+
+
+
+
 * {
 
   box-sizing: border-box;
@@ -979,6 +1016,9 @@ li {
   transition: transform 0.5s ease;
 
 }
+
+
+
 
 
 
