--- a/estilo.css
+++ b/estilo.css
@@ -811,7 +811,6 @@ img {
 
 .subsub {
 
-  background-color: white;
   padding: 5px;
   margin-left: 7%;
   margin-right: 7%;
@@ -1051,8 +1050,8 @@ span {
   position: absolute;
   top: 10px;
   left: 20px;
-  height: 120px;
-  width: 130px;
+  height: 90px;
+  width: 100px;
 
 
 
@@ -1333,7 +1332,7 @@ textarea {
   position: absolute;
   left: 0;
   width: 100%;
-  height: 1px;
+  height: 1%;
   background-color: rgb(0, 0, 0);
   transform: scaleX(0);
   transition: transform 0.40s;
@@ -1346,7 +1345,6 @@ textarea {
 .link::before {
 
   top: -3px;
-
 
 
 
@@ -1369,7 +1367,6 @@ textarea {
 
 
 .link:hover {
-
 
 
   cursor: pointer;
