--- a/estilo.css
+++ b/estilo.css
@@ -9,6 +9,7 @@ html {
 
 
 
+
 #video-container {
   position: absolute;
   top: 0;
@@ -188,8 +189,48 @@ a {
 
 
 
+#marcarVideo{
+
+  padding: 3px;
+  border-top: 1px solid white;
+  border-bottom: 1px solid white;
+
+}
 
 
+#marcarPagina{
+
+
+  padding: 2.8px;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+
+
+}
+
+
+#marcarAbajo{
+
+
+  padding: none;
+  border-bottom: 2px solid black;
+
+
+
+
+}
+
+
+#marcarAbajoVídeo{
+
+
+  padding: none;
+  border-bottom: 2px solid white;
+
+
+
+
+}
 
 
 
@@ -770,6 +811,7 @@ img {
 .submovil {
 
   transition: opacity 0.5s;
+  padding: 3px;
   margin-top: 5px;
   margin-left: 7%;
   margin-right: 7%;
